--- a/NexuSeguros/src/main/java/com/mycompany/nexuseguros/dashboardAgente.form
+++ b/NexuSeguros/src/main/java/com/mycompany/nexuseguros/dashboardAgente.form
@@ -49,9 +49,9 @@
               <Group type="102" alignment="0" attributes="0">
                   <Component id="menu" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="header" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="contentAgente" max="32767" attributes="0"/>
+                      <Component id="header" pref="740" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
